<!--
  ~ Copyright (c) 2018 Piotr "n1t4chi" Olejarz
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                          http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.FirstStory</groupId>
    <artifactId>FirstStory</artifactId>
    <version>0.2</version>
    <packaging>pom</packaging>

    <name>First Story</name>
    <description>First Story game project</description>
    <inceptionYear>2017</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <first.story.version>0.2</first.story.version>
        <first.slave.version>0.1</first.slave.version>
        <first.inscriptions.version>0.1</first.inscriptions.version>
        <first.master.version>0.1</first.master.version>
        <first.tools.version>0.1</first.tools.version>
        <first.oracle.version>0.6</first.oracle.version>
        <lwjgl.version>3.2.0</lwjgl.version>
        <joml.version>1.9.12</joml.version>
    </properties>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M1</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <target>12</target>
                        <release>12</release>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                            <arg>-Xlint:all</arg>
                            <arg>-Xdiags:verbose</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.0.1</version>
                    <configuration>
                        <additionalJOptions>
                            <additionalJOption>--enable-preview</additionalJOption>
                            <additionalJOption>-source</additionalJOption>
                            <additionalJOption>12</additionalJOption>
                        </additionalJOptions>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>lwjgl-natives-linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <lwjgl.natives>natives-linux</lwjgl.natives>
            </properties>
        </profile>
        <profile>
            <id>lwjgl-natives-macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <lwjgl.natives>natives-macos</lwjgl.natives>
            </properties>
        </profile>
        <profile>
            <id>lwjgl-natives-windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <lwjgl.natives>natives-windows</lwjgl.natives>
                <!--<lwjgl.natives>natives-linux</lwjgl.natives>-->
            </properties>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <!--First Tools-->
            <dependency>
                <groupId>com.FirstStory.FirstTools</groupId>
                <artifactId>FirstTools</artifactId>
                <version>${first.tools.version}</version>
            </dependency>

            <!--First Oracle-->
            <dependency>
                <groupId>com.FirstStory.FirstOracle</groupId>
                <artifactId>FirstOracle-Interfaces</artifactId>
                <version>${first.oracle.version}</version>
            </dependency>
            <dependency>
                <groupId>com.FirstStory.FirstOracle</groupId>
                <artifactId>FirstOracle-Impl</artifactId>
                <version>${first.oracle.version}</version>
            </dependency>
            <dependency>
                <groupId>com.FirstStory.FirstOracle</groupId>
                <artifactId>FirstOracle-Engine</artifactId>
                <version>${first.oracle.version}</version>
            </dependency>

            <!--First Inscriptions-->
            <dependency>
                <groupId>com.FirstStory.FirstInscriptions</groupId>
                <artifactId>FirstInscriptions-Interfaces</artifactId>
                <version>${first.inscriptions.version}</version>
            </dependency>
            <dependency>
                <groupId>com.FirstStory.FirstInscriptions</groupId>
                <artifactId>FirstInscriptions-Impl</artifactId>
                <version>${first.inscriptions.version}</version>
            </dependency>

            <!--First Master-->
            <dependency>
                <groupId>com.FirstStory.FirstMaster</groupId>
                <artifactId>FirstMaster-Server</artifactId>
                <version>${first.master.version}</version>
            </dependency>

            <!--First Slave-->
            <dependency>
                <groupId>com.FirstStory.FirstSlave</groupId>
                <artifactId>FirstSlave-Application</artifactId>
                <version>${first.slave.version}</version>
            </dependency>
            <dependency>
                <groupId>com.FirstStory.FirstSlave</groupId>
                <artifactId>FirstSlave-WebClient</artifactId>
                <version>${first.slave.version}</version>
            </dependency>


            <dependency>
                <groupId>jfxgl</groupId>
                <artifactId>jfxgl</artifactId>
                <version>0.5-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>jfxgl</groupId>
                <artifactId>jfxgl-jfxrt</artifactId>
                <version>0.5-SNAPSHOT</version>
            </dependency>


            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-nuklear</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-openal</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opencl</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-vulkan</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-nuklear</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-openal</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.joml</groupId>
                <artifactId>joml</artifactId>
                <version>${joml.version}</version>
            </dependency>


            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.9.7</version>
            </dependency>


            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.6</version>
                <scope>provided</scope>
            </dependency>


            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>3.5</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.3.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>5.3.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>17.0.0</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>FirstOracle</module>
        <module>FirstSlave</module>
        <module>FirstMaster</module>
        <module>FirstInscriptions</module>
        <module>FirstTools</module>
    </modules>
</project>
